--- a/SaVaGe/SaVaGe/Base.lproj/Main.storyboard
+++ b/SaVaGe/SaVaGe/Base.lproj/Main.storyboard
@@ -5,6 +5,9 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -116,7 +119,7 @@
             </objects>
             <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
-        <!--Buttons-->
+        <!--Accessibility-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="ButtonsViewController" customModule="SaVaGe" customModuleProvider="target" sceneMemberID="viewController">
@@ -124,26 +127,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" text="Second View" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zEq-FU-wV5">
-                                <rect key="frame" x="87" y="312" width="201.5" height="43"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pumpkin_png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1DA-4C-9fI">
+                                <rect key="frame" x="140" y="96" width="96" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1DA-4C-9fI" secondAttribute="height" multiplier="1:1" id="5aF-OQ-NNw"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pumpkin_pdf" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QuR-CM-wkQ">
+                                <rect key="frame" x="139" y="382.5" width="96" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="QuR-CM-wkQ" secondAttribute="height" multiplier="1:1" id="yYt-rs-UMf"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PNG image" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ryj-U3-G6N">
+                                <rect key="frame" x="140" y="200.5" width="96" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PDF image" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXl-xj-osf">
+                                <rect key="frame" x="139" y="487" width="96" height="20.5"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="zEq-FU-wV5" secondAttribute="centerX" id="qqM-NS-xev"/>
-                            <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
+                            <constraint firstItem="QuR-CM-wkQ" firstAttribute="width" secondItem="oXl-xj-osf" secondAttribute="width" id="36H-8T-cwv"/>
+                            <constraint firstItem="1DA-4C-9fI" firstAttribute="width" secondItem="ryj-U3-G6N" secondAttribute="width" id="5pi-8m-CvC"/>
+                            <constraint firstItem="1DA-4C-9fI" firstAttribute="centerX" secondItem="O1u-W8-tvY" secondAttribute="centerX" id="ArA-eY-O8s"/>
+                            <constraint firstItem="oXl-xj-osf" firstAttribute="centerX" secondItem="QuR-CM-wkQ" secondAttribute="centerX" id="ByL-qg-JdY"/>
+                            <constraint firstItem="ryj-U3-G6N" firstAttribute="firstBaseline" secondItem="1DA-4C-9fI" secondAttribute="baseline" constant="24.5" symbolType="layoutAnchor" id="XU5-Je-S99"/>
+                            <constraint firstItem="ryj-U3-G6N" firstAttribute="centerX" secondItem="1DA-4C-9fI" secondAttribute="centerX" id="YL4-AW-1AL"/>
+                            <constraint firstItem="oXl-xj-osf" firstAttribute="firstBaseline" secondItem="QuR-CM-wkQ" secondAttribute="baseline" constant="24.5" symbolType="layoutAnchor" id="gW7-wg-QGX"/>
+                            <constraint firstItem="QuR-CM-wkQ" firstAttribute="centerY" secondItem="O1u-W8-tvY" secondAttribute="centerY" multiplier="1.35" id="jam-4S-s4C"/>
+                            <constraint firstItem="QuR-CM-wkQ" firstAttribute="centerX" secondItem="O1u-W8-tvY" secondAttribute="centerX" id="t4U-sF-Nat"/>
+                            <constraint firstItem="1DA-4C-9fI" firstAttribute="centerY" secondItem="O1u-W8-tvY" secondAttribute="centerY" multiplier="0.45" id="yvc-Kh-yYI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Buttons" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Accessibility" image="second" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="360"/>
+            <point key="canvasLocation" x="749.60000000000002" y="359.37031484257875"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="yl2-sM-qoP">
@@ -165,9 +193,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="cat_pdf" width="192" height="188"/>
+        <image name="cat_pdf" width="96" height="94"/>
         <image name="cat_png" width="96" height="94"/>
         <image name="first" width="24" height="30"/>
+        <image name="pumpkin_pdf" width="96" height="94"/>
+        <image name="pumpkin_png" width="96" height="94"/>
         <image name="second" width="30" height="30"/>
     </resources>
 </document>
